| Bug #18280 | RBR: Extreneous table maps when writing to slow_log and general_log | ||
|---|---|---|---|
| Submitted: | 16 Mar 2006 13:27 | Modified: | 18 Mar 2006 18:03 |
| Reporter: | Mats Kindahl | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Replication | Severity: | S3 (Non-critical) |
| Version: | 5.1.8 | OS: | Any (ALL) |
| Assigned to: | Mats Kindahl | CPU Architecture: | Any |
[16 Mar 2006 13:27]
Mats Kindahl
[18 Mar 2006 18:02]
Paul DuBois
No changelog entry needed.
