Bug#18280 (RBR: Extreneous maps when writing to general_log and slow_log): Filter out replication general_log and slow_log entirely from binary log. Caching result of table share-specific tests.